package kbstd.flexpoint.pkg.model.traits;

public enum RoleType {
    USER, ADMIN;
}
